# lead-superstore

./: .gitignore
apps/api/: .gitignore  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  db.py  errors.py
apps/api/app/routers/: ai_tools.py  applications.py  deductions.py  jobs.py  outlets.py  payroll.py  products.py  roles.py  staff.py  transfers.py  verification.py
apps/api/app/schemas/: deductions.py  job.py  outlet.py  payroll.py  product.py  role.py  staff.py  transfers.py  verification.py
apps/api/app/services/: ai.py  payroll.py
apps/lead-ecommerce/: package.json  pnpm-lock.yaml
apps/lead-ecommerce/src/app/: layout.tsx  page.tsx
apps/lead-ecommerce/src/app/(site)/: layout.tsx
apps/lead-ecommerce/src/components/layout/: site-footer.tsx  site-header.tsx
apps/lead-ecommerce/src/components/providers/: query-provider.tsx
apps/lead-ecommerce/src/lib/api/: careers.ts  client.ts
apps/lead-ecommerce/src/lib/types/: index.ts
apps/lead-hr-portal/: package.json  pnpm-lock.yaml
apps/lead-hr-portal/src/app/: layout.tsx  page.tsx
apps/lead-hr-portal/src/app/(portal)/: layout.tsx
apps/lead-hr-portal/src/components/layout/: sidebar.tsx  topbar.tsx
apps/lead-hr-portal/src/components/providers/: query-provider.tsx
apps/lead-hr-portal/src/components/roles/: role-detail.tsx
apps/lead-hr-portal/src/components/staff/: assignment-history.tsx  transfer-modal.tsx
apps/lead-hr-portal/src/components/ui/: application-status-badge.tsx  avatar.tsx  job-status-badge.tsx  list-editor.tsx  payroll-status-badge.tsx  states.tsx  (+2 more)
(+30 files in other folders)
