[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "supabase>=2.29.0",
    "uvicorn[standard]>=0.46.0",
]


[project.scripts]
dev = "uvicorn:run"
